--- a/app/views/lookbook/layouts/app.html.erb
+++ b/app/views/lookbook/layouts/app.html.erb
@@ -26,7 +26,7 @@
       });
     ">
     <%= render "partials/sidebar" %>
-    <div class="h-screen gutter border-r border-gray-300 relative" x-init="split({el: $el, minSize: 200, onDrag: (splits) => { $store.nav.width = Math.min(splits[0], 500) }})">
+    <div class="h-screen gutter border-r border-gray-300 relative" x-data="split({minSize: 200, onDrag: (splits) => { $store.nav.width = Math.min(splits[0], 500) }})">
       <div class="w-[9px] h-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute top-0 bottom-0 transform -translate-x-1/2 cursor-[col-resize] z-10"></div>
     </div>
     <div id="main" class="h-screen overflow-hidden w-full" x-init="$watch('doc', () => {
