--- a/app/views/lookbook/partials/_preview.html.erb
+++ b/app/views/lookbook/partials/_preview.html.erb
@@ -4,7 +4,7 @@
       src="<%= "#{Rails.application.config.view_component.preview_route}/#{@preview.preview_name}/#{@example_name}" %>"
       frameborder="0"
       class="h-full w-full border-l border-gray-300 pr-4 -mx-px"
-      x-data="size-observer"
+      x-data="sizeObserver"
       x-effect="viewportWidth = observedWidth; viewportHeight = observedHeight;"
       seamless></iframe>
     <div class="absolute opacity-0 inset-0 pointer-events-none" :class="{ 'pointer-events-none': !$store.app.reflowing }"></div>
