--- a/app/views/lookbook/browser/index.html.erb
+++ b/app/views/lookbook/browser/index.html.erb
@@ -1,12 +1,9 @@
-<div class="flex flex-col h-screen">
-  <header class="py-2 px-4 w-full flex-none bg-white border-b border-gray-300 h-10 flex items-center">
-    <strong>Component Browser</strong>
-  </header>
-
-  <div class="p-4 flex items-center w-full h-full">
-    <div class="flex flex-col items-center justify-center w-full h-full">
-      <i data-feather="layers" class="w-10 h-10 text-gray-200"></i>
-      <h5 class="mt-4 text-gray-400">Select a preview from the left to get started</h5>
-    </div>
+<div class="flex flex-col items-center justify-center h-screen w-full">
+  <div class="p-4 text-center">
+    <svg class="feather w-10 h-10 text-gray-300 mx-auto">
+      <use xlink:href="#layers" />
+    </svg>
+    <h5 class="mt-4 text-gray-400 text-base">Select a preview to get started</h5>
+    <%= config.auto_refresh %>
   </div>
 </div>
