--- a/app/views/lookbook/partials/_nav.html.erb
+++ b/app/views/lookbook/partials/_nav.html.erb
@@ -1,14 +1,18 @@
 <% flat ||= false %>
-<ul class="select-none <%= "divide-y divide-gray-300" if depth == 0 %>">
+<ul id="nav-<%= flat ? "flat" : "nested" %>" class="select-none <%= "divide-y divide-gray-300" if depth == 0 %>" @document:updated.window="$el.innerHTML = $event.detail.doc.getElementById('nav-<%= flat ? "flat" : "nested" %>').innerHTML">
   <% items.each do |item| %>
     <li
       class="<%= "py-2" if depth == 0 %>"
       x-data="{id: '<%= item[:name] %>'}"
       <% if item[:type] == :preview %>x-show="!$store.nav.filter || id.toLowerCase().includes($store.nav.filter.toLowerCase())"<% end %>>
       <div class="flex items-center cursor-pointer pr-3 py-[3px]" @click="open[id] = !open[id]" style="padding-left: calc((<%= depth %> * 12px) + 0.5rem)">
-        <i data-feather="chevron-down" class="w-3 mr-1 text-gray-500 flex-none" x-show="open[id]" x-cloak></i>
-        <i data-feather="chevron-right" class="w-3 mr-1 text-gray-500 flex-none" x-show="!open[id]"></i>
-        <i data-feather="<%= item[:type] == :group ? 'folder' : 'layers' %>" class="w-4 h-4 mr-1.5 flex-none text-indigo-600"></i>
+        <svg class="feather w-3 h-3 mr-1 text-gray-500 flex-none">
+          <use xlink:href="#chevron-down" x-show="open[id]" x-cloak />
+          <use xlink:href="#chevron-right" x-show="!open[id]" />
+        </svg>
+        <svg class="feather h-3.5 w-3.5 mr-1.5 flex-none text-indigo-500">
+          <use xlink:href="#<%= item[:type] == :group ? "folder" : "layers" %>" />
+        </svg>
         <div class="truncate whitespace-nowrap text-left <%= "font-bold" if item[:type] == :preview %>"<% if flat %> style="direction: rtl;"<% end %>>
           <%= item[:label] %>
         </div>
@@ -28,7 +32,9 @@
                   @click.stop.prevent="history.pushState({}, null, $event.currentTarget.href); $dispatch('popstate');"
                   >
                   <div :class="{'text-gray-900': $store.nav.active === path, 'text-indigo-500': $store.nav.active !== path}">
-                    <i data-feather="eye" class="w-4 h-4 mr-1.5 flex-none group-hover:text-indigo-800 transition"></i>
+                    <svg class="feather w-3.5 h-3.5 mr-1.5 flex-none group-hover:text-indigo-800 transition">
+                      <use xlink:href="#eye" />
+                    </svg>
                   </div>
                   <div class="truncate whitespace-nowrap">
                     <%= example[:label] %>
