--- a/app/views/lookbook/partials/_sidebar.html.erb
+++ b/app/views/lookbook/partials/_sidebar.html.erb
@@ -13,10 +13,10 @@
   </div>
   <div id="nav" class="bg-gray-100 relative overflow-auto" style="height: calc(100% - 40px)" @scroll.passive="$store.nav.scrollTop = $event.currentTarget.scrollTop;" x-init="setTimeout(() => {$el.scrollTop = $store.nav.scrollTop}, 30)">
     <nav class="pb-6 h-full" x-show="$store.nav.filter != ''">
-      <%= render "partials/nav", **@nav[:flat], foo: "flat" %>
+      <%= render "partials/nav", @nav[:flat] %>
     </nav>
     <nav class="pb-6 h-full" x-show="$store.nav.filter == ''">
-      <%= render "partials/nav", **@nav[:nested], foo: "nested" %>
+      <%= render "partials/nav", @nav[:nested] %>
     </nav>
   </div> 
 </div>
