--- a/app/views/lookbook/layouts/app.html.erb
+++ b/app/views/lookbook/layouts/app.html.erb
@@ -20,6 +20,7 @@
     :style="`grid-template-columns: ${$store.nav.width}px 1px 1fr;`"
     x-data="{
       doc: document,
+      location: window.location.pathname,
       update(eventName){
         return fetch(document.location).then(async response => {
           if (!response.ok) return location.reload();
@@ -29,9 +30,9 @@
         });
       }
     }"
-    x-effect="document.title = doc.title"
+    x-effect="document.title = doc.title; location = window.location.pathname"
     @refresh.document="update('document:updated')"
-    @popstate.window="update('document:loaded')">
+    @popstate.document="update('document:loaded')">
     <%= render "partials/sidebar" %>
     <div class="h-screen gutter border-r border-gray-300 relative" x-data="split({minSize: 200, onDrag: (splits) => { $store.nav.width = Math.min(splits[0], 500) }})">
       <div class="w-[9px] h-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute top-0 bottom-0 transform -translate-x-1/2 cursor-[col-resize] z-10"></div>
