--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1532,16 +1532,16 @@ pre[class*="language-"] {
   height: 11px;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-3 {
   height: 0.75rem;
 }
 
 .h-3\.5 {
   height: 0.875rem;
-}
-
-.h-4 {
-  height: 1rem;
 }
 
 .w-full {
@@ -1560,16 +1560,16 @@ pre[class*="language-"] {
   width: 9px;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .w-3 {
   width: 0.75rem;
 }
 
 .w-3\.5 {
   width: 0.875rem;
-}
-
-.w-4 {
-  width: 1rem;
 }
 
 .max-w-full {
@@ -1678,6 +1678,10 @@ pre[class*="language-"] {
   white-space: nowrap;
 }
 
+.rounded-bl-md {
+  border-bottom-left-radius: 0.375rem;
+}
+
 .border-0 {
   border-width: 0px;
 }
@@ -1747,6 +1751,14 @@ pre[class*="language-"] {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-1\.5 {
+  padding: 0.375rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .py-2 {
@@ -1894,6 +1906,94 @@ pre[class*="language-"] {
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.tippy-box[data-animation=fade][data-state=hidden]{
+  opacity:0
+}
+
+[data-tippy-root]{
+  max-width:calc(100vw - 10px)
+}
+
+.tippy-box{
+  position:relative;
+  background-color:#333;
+  color:#fff;
+  border-radius:4px;
+  font-size:14px;
+  line-height:1.4;
+  outline:0;
+  transition-property:transform,visibility,opacity
+}
+
+.tippy-box[data-placement^=top]>.tippy-arrow{
+  bottom:0
+}
+
+.tippy-box[data-placement^=top]>.tippy-arrow:before{
+  bottom:-7px;
+  left:0;
+  border-width:8px 8px 0;
+  border-top-color:initial;
+  transform-origin:center top
+}
+
+.tippy-box[data-placement^=bottom]>.tippy-arrow{
+  top:0
+}
+
+.tippy-box[data-placement^=bottom]>.tippy-arrow:before{
+  top:-7px;
+  left:0;
+  border-width:0 8px 8px;
+  border-bottom-color:initial;
+  transform-origin:center bottom
+}
+
+.tippy-box[data-placement^=left]>.tippy-arrow{
+  right:0
+}
+
+.tippy-box[data-placement^=left]>.tippy-arrow:before{
+  border-width:8px 0 8px 8px;
+  border-left-color:initial;
+  right:-7px;
+  transform-origin:center left
+}
+
+.tippy-box[data-placement^=right]>.tippy-arrow{
+  left:0
+}
+
+.tippy-box[data-placement^=right]>.tippy-arrow:before{
+  left:-7px;
+  border-width:8px 8px 8px 0;
+  border-right-color:initial;
+  transform-origin:center right
+}
+
+.tippy-box[data-inertia][data-state=visible]{
+  transition-timing-function:cubic-bezier(.54,1.5,.38,1.11)
+}
+
+.tippy-arrow{
+  width:16px;
+  height:16px;
+  color:#333
+}
+
+.tippy-arrow:before{
+  content:"";
+  position:absolute;
+  border-color:transparent;
+  border-style:solid
+}
+
+.tippy-content{
+  position:relative;
+  padding:5px 9px;
+  z-index:1
 }
 
 /*
@@ -2171,6 +2271,37 @@ pre[class*="language-"] {
 .highlight .gc {
   color: #999;
   background-color: #eaf2f5;
+}
+
+.tippy-box[data-theme~="lookbook"] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
+  font-size: 0.75rem;
+  line-height: 1rem;
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+  opacity: 0.9;
+}
+
+.tippy-box[data-theme~="lookbook"][data-placement^="top"] > .tippy-arrow::before {
+  border-top-color: #6366f1;
+}
+
+.tippy-box[data-theme~="lookbook"][data-placement^="bottom"] > .tippy-arrow::before {
+  border-bottom-color: #6366f1;
+}
+
+.tippy-box[data-theme~="lookbook"][data-placement^="left"] > .tippy-arrow::before {
+  border-left-color: #6366f1;
+}
+
+.tippy-box[data-theme~="lookbook"][data-placement^="right"] > .tippy-arrow::before {
+  border-right-color: #6366f1;
+}
+
+.hover\:border-gray-300:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
 .hover\:bg-indigo-100:hover {
