Fix deprecation warning for icon_sprite partial

--- a/app/views/lookbook/layouts/app.html.erb
+++ b/app/views/lookbook/layouts/app.html.erb
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link href="/lookbook-assets/app.css" rel="stylesheet">
 
   <script>
     window.SOCKET_PATH = "/lookbook/cable"
   </script>
   <script src="/lookbook-assets/app.js" defer></script>
-  
+
   <title><% if @preview %><%= @preview.label %> : <%= @example_name.capitalize %> | <% end %>Lookbook</title>
 </head>
 <body class="text-gray-800 font-sans text-sm antialiased">
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="hidden">
-    <%= render "partials/icon_sprite.svg" %>
+    <%= render "partials/icon_sprite" %>
   </div>
 </body>
 </html>
