--- a/app/views/lookbook/browser/show.html.erb
+++ b/app/views/lookbook/browser/show.html.erb
@@ -5,7 +5,7 @@
       <div class="flex items-center space-x-1">
         <strong><%= @preview.label %></strong>
         <span>/</span>
-        <span><%= @example_name.titleize %></span>
+        <span><%= @example.label %></span>
       </div>
       <a href="<%= preview_path %>" class="block ml-2 text-gray-400 hover:text-indigo-800 transition" x-tooltip.theme.lookbook="`Open preview in new window`" target="_blank">
         <svg class="feather w-3 h-3 ">
