--- a/app/views/lookbook/browser/show.html.erb
+++ b/app/views/lookbook/browser/show.html.erb
@@ -25,7 +25,9 @@
     <div class="w-full gutter border-t border-gray-300 relative" x-data="split({direction: 'vertical', minSize: 200, onDrag: (splits) => { $store.inspector.height = splits[2] }})">
       <div class="h-[11px] w-full bg-transparent hover:bg-indigo-100 hover:bg-opacity-20 transition absolute left-0 right-0 transform -translate-y-1/2 cursor-[row-resize]"></div>
     </div>
-    <%= render "partials/inspector" %>
+    <% if @inspector %>
+      <%= render "partials/inspector/inspector" %>
+    <% end %>
   </div>
     
 </div>
