--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1496,6 +1496,14 @@ pre[class*="language-"] {
   margin-right: 0.375rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -1510,10 +1518,6 @@ pre[class*="language-"] {
 
 .hidden {
   display: none;
-}
-
-.\!hidden {
-  display: none !important;
 }
 
 .h-screen {
@@ -1691,12 +1695,12 @@ pre[class*="language-"] {
   border-right-width: 1px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-l {
   border-left-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-gray-300 {
@@ -1777,6 +1781,16 @@ pre[class*="language-"] {
 .py-\[4px\] {
   padding-top: 4px;
   padding-bottom: 4px;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-\[3px\] {
@@ -1861,14 +1875,14 @@ pre[class*="language-"] {
   color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 
-.\!text-gray-300 {
-  --tw-text-opacity: 1 !important;
-  color: rgba(209, 213, 219, var(--tw-text-opacity)) !important;
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+
+.\!text-gray-300 {
+  --tw-text-opacity: 1 !important;
+  color: rgba(209, 213, 219, var(--tw-text-opacity)) !important;
 }
 
 .text-indigo-500 {
@@ -1879,6 +1893,11 @@ pre[class*="language-"] {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
 .underline {
@@ -1892,6 +1911,10 @@ pre[class*="language-"] {
 
 .opacity-0 {
   opacity: 0;
+}
+
+.opacity-80 {
+  opacity: 0.8;
 }
 
 .opacity-50 {
@@ -2306,6 +2329,37 @@ pre[class*="language-"] {
   border-right-color: #6366f1;
 }
 
+@layer base {
+  html {
+    scroll-behavior: smooth;
+  }
+
+  @media screen and (prefers-reduced-motion: reduce) {
+    html {
+      scroll-behavior: auto;
+    }
+  }
+
+  [x-cloak] {
+    display: none !important;
+  }
+
+  pre[class*="language-"] {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  .feather {
+    width: 24px;
+    height: 24px;
+    stroke: currentColor;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    fill: none;
+  }
+}
+
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -2334,14 +2388,14 @@ pre[class*="language-"] {
   color: rgba(55, 48, 163, var(--tw-text-opacity));
 }
 
-.hover\:text-gray-700:hover {
-  --tw-text-opacity: 1;
-  color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-
 .hover\:text-indigo-500:hover {
   --tw-text-opacity: 1;
   color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+
+.hover\:text-gray-700:hover {
+  --tw-text-opacity: 1;
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
