--- a/app/views/lookbook/browser/not_found.html.erb
+++ b/app/views/lookbook/browser/not_found.html.erb
@@ -5,16 +5,20 @@
     </svg>
     <div class="mt-3 text-gray-700 max-w-xs">
       <% if @preview %>
-        <h5 class="text-base">Not found</h5>
-        <p class="mt-2 text-gray-400 text-sm">
-          The "<span class="text-gray-500"><%= @preview.lookbook_label %></span>" preview does not have an example named "<span class="text-gray-500"><%= @example_name %></span>".
-        </p>
+        <div data-role="example-not-found">
+          <h5 class="text-base">Not found</h5>
+          <p class="mt-2 text-gray-400 text-sm">
+            The "<span class="text-gray-500"><%= @preview.lookbook_label %></span>" preview does not have an example named "<span class="text-gray-500"><%= @example_name %></span>".
+          </p>
+        </div>
       <% else %>
-        <h5 class="text-base">Preview not found</h5>
-        <p class="mt-2 text-gray-400 text-sm">
-          Looked for "<span class="text-gray-500"><%= params[:path] %></span>".<br>
-          The preview may have been renamed or deleted.
-        </p>
+        <div data-role="preview-not-found">
+          <h5 class="text-base">Preview not found</h5>
+          <p class="mt-2 text-gray-400 text-sm">
+            Looked for "<span class="text-gray-500"><%= params[:path] %></span>".<br>
+            The preview may have been renamed or deleted.
+          </p>
+        </div>
       <% end %>
     </div>
   </div>
