Only create websocket when UI auto refresh is enabled

--- a/app/views/lookbook/layouts/app.html.erb
+++ b/app/views/lookbook/layouts/app.html.erb
@@ -8,9 +8,11 @@
   <link href="/lookbook-assets/app.css" rel="stylesheet">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👀</text></svg>">
 
-  <script>
-    window.SOCKET_PATH = "/lookbook/cable"
-  </script>
+  <% if config.auto_refresh %>
+    <script>
+      window.SOCKET_PATH = "/lookbook/cable";
+    </script>
+  <% end %>
   <script src="/lookbook-assets/app.js" defer></script>
 
   <title><%= [@example&.label, @preview&.label, "Lookbook"].compact.join(" :: ") %></title>
