--- a/app/views/lookbook/partials/_preview.html.erb
+++ b/app/views/lookbook/partials/_preview.html.erb
@@ -2,7 +2,7 @@
   <div class="h-full relative mx-auto bg-white" x-data="preview" :style="`width: ${$store.preview.width}`">
     <iframe
       src="<%= url_for lookbook.preview_path %>"
-      srcdoc="<%== @preview_srcdoc %>"
+      <% if config.preview_srcdoc %>srcdoc="<%== @preview_srcdoc %>"<% end %>
       frameborder="0"
       class="h-full w-full border-l border-gray-300 pr-4 -mx-px"
       x-data="sizeObserver"
